# gen/http/position/server/encode_decode.go
@@ -1,0 +1,44 @@
+// Code generated by goa v3.22.1, DO NOT EDIT.
+//
+// position HTTP server encoders and decoders
+//
+// Command:
+// $ goa gen stock-bot/design
+
+package server
+
+import (
+	"context"
+	"net/http"
+	position "stock-bot/gen/position"
+
+	goahttp "goa.design/goa/v3/http"
+)
+
+// EncodeListResponse returns an encoder for responses returned by the position
+// list endpoint.
+func EncodeListResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, any) error {
+	return func(ctx context.Context, w http.ResponseWriter, v any) error {
+		res, _ := v.([]*position.StockPosition)
+		enc := encoder(ctx, w)
+		body := NewListResponseBody(res)
+		w.WriteHeader(http.StatusOK)
+		return enc.Encode(body)
+	}
+}
+
+// marshalPositionStockPositionToStockPositionResponse builds a value of type
+// *StockPositionResponse from a value of type *position.StockPosition.
+func marshalPositionStockPositionToStockPositionResponse(v *position.StockPosition) *StockPositionResponse {
+	res := &StockPositionResponse{
+		ID:           v.ID,
+		Symbol:       v.Symbol,
+		PositionType: v.PositionType,
+		AveragePrice: v.AveragePrice,
+		Quantity:     v.Quantity,
+		CreatedAt:    v.CreatedAt,
+		UpdatedAt:    v.UpdatedAt,
+	}
+
+	return res
+}
