# gen/http/position/server/paths.go
@@ -1,0 +1,13 @@
+// Code generated by goa v3.22.1, DO NOT EDIT.
+//
+// HTTP request path constructors for the position service.
+//
+// Command:
+// $ goa gen stock-bot/design
+
+package server
+
+// ListPositionPath returns the URL path to the position service list HTTP endpoint.
+func ListPositionPath() string {
+	return "/positions"
+}
