# gen/http/position/server/types.go
@@ -1,0 +1,44 @@
+// Code generated by goa v3.22.1, DO NOT EDIT.
+//
+// position HTTP server types
+//
+// Command:
+// $ goa gen stock-bot/design
+
+package server
+
+import (
+	position "stock-bot/gen/position"
+)
+
+// ListResponseBody is the type of the "position" service "list" endpoint HTTP
+// response body.
+type ListResponseBody []*StockPositionResponse
+
+// StockPositionResponse is used to define fields on response body types.
+type StockPositionResponse struct {
+	// ID
+	ID uint `form:"id" json:"id" xml:"id"`
+	// 銘柄コード
+	Symbol string `form:"symbol" json:"symbol" xml:"symbol"`
+	// ポジション種別 (LONG or SHORT)
+	PositionType string `form:"position_type" json:"position_type" xml:"position_type"`
+	// 平均取得単価
+	AveragePrice float64 `form:"average_price" json:"average_price" xml:"average_price"`
+	// 保有数量
+	Quantity int `form:"quantity" json:"quantity" xml:"quantity"`
+	// 作成日時
+	CreatedAt string `form:"created_at" json:"created_at" xml:"created_at"`
+	// 更新日時
+	UpdatedAt string `form:"updated_at" json:"updated_at" xml:"updated_at"`
+}
+
+// NewListResponseBody builds the HTTP response body from the result of the
+// "list" endpoint of the "position" service.
+func NewListResponseBody(res []*position.StockPosition) ListResponseBody {
+	body := make([]*StockPositionResponse, len(res))
+	for i, val := range res {
+		body[i] = marshalPositionStockPositionToStockPositionResponse(val)
+	}
+	return body
+}
