# gen/position/endpoints.go
@@ -1,0 +1,39 @@
+// Code generated by goa v3.22.1, DO NOT EDIT.
+//
+// position endpoints
+//
+// Command:
+// $ goa gen stock-bot/design
+
+package position
+
+import (
+	"context"
+
+	goa "goa.design/goa/v3/pkg"
+)
+
+// Endpoints wraps the "position" service endpoints.
+type Endpoints struct {
+	List goa.Endpoint
+}
+
+// NewEndpoints wraps the methods of the "position" service with endpoints.
+func NewEndpoints(s Service) *Endpoints {
+	return &Endpoints{
+		List: NewListEndpoint(s),
+	}
+}
+
+// Use applies the given middleware to all the "position" service endpoints.
+func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
+	e.List = m(e.List)
+}
+
+// NewListEndpoint returns an endpoint function that calls the method "list" of
+// service "position".
+func NewListEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req any) (any, error) {
+		return s.List(ctx)
+	}
+}
