# gen/position/views/view.go
@@ -1,0 +1,84 @@
+// Code generated by goa v3.22.1, DO NOT EDIT.
+//
+// position views
+//
+// Command:
+// $ goa gen stock-bot/design
+
+package views
+
+import (
+	goa "goa.design/goa/v3/pkg"
+)
+
+// StockPositionView is a type that runs validations on a projected type.
+type StockPositionView struct {
+	// ID
+	ID *uint
+	// 銘柄コード
+	Symbol *string
+	// ポジション種別 (LONG or SHORT)
+	PositionType *string
+	// 平均取得単価
+	AveragePrice *float64
+	// 保有数量
+	Quantity *int
+	// 作成日時
+	CreatedAt *string
+	// 更新日時
+	UpdatedAt *string
+}
+
+var (
+	// StockPositionMap is a map indexing the attribute names of StockPosition by
+	// view name.
+	StockPositionMap = map[string][]string{
+		"default": {
+			"id",
+			"symbol",
+			"position_type",
+			"average_price",
+			"quantity",
+			"created_at",
+			"updated_at",
+		},
+	}
+)
+
+// ValidateStockPositionView runs the validations defined on StockPositionView
+// using the "default" view.
+func ValidateStockPositionView(result *StockPositionView) (err error) {
+	if result.ID == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("id", "result"))
+	}
+	if result.Symbol == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("symbol", "result"))
+	}
+	if result.PositionType == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("position_type", "result"))
+	}
+	if result.AveragePrice == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("average_price", "result"))
+	}
+	if result.Quantity == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("quantity", "result"))
+	}
+	if result.CreatedAt == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("created_at", "result"))
+	}
+	if result.UpdatedAt == nil {
+		err = goa.MergeErrors(err, goa.MissingFieldError("updated_at", "result"))
+	}
+	if result.PositionType != nil {
+		if !(*result.PositionType == "LONG" || *result.PositionType == "SHORT") {
+			err = goa.MergeErrors(err, goa.InvalidEnumValueError("result.position_type", *result.PositionType, []any{"LONG", "SHORT"}))
+		}
+	}
+	if result.CreatedAt != nil {
+		err = goa.MergeErrors(err, goa.ValidateFormat("result.created_at", *result.CreatedAt, goa.FormatDateTime))
+	}
+	if result.UpdatedAt != nil {
+		err = goa.MergeErrors(err, goa.ValidateFormat("result.updated_at", *result.UpdatedAt, goa.FormatDateTime))
+	}
+	return
+}
